[package]
name = "poem2poem"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
iroh = "0.32"
iroh-blobs = { version = "0.32", features = ["rpc"] }
anyhow = "1"
iroh-base = "0.32.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
