[package]
name = "poem2poem"
version = "0.1.0"
edition = "2021"

[features]
engine = ["iroh-gossip/net"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
iroh = "0.32"
iroh-blobs = { version = "0.32", features = ["net_protocol", "rpc"] }
iroh-base = "0.32.0"
iroh-docs = { version = "0.32.0", features = ["rpc"] }
iroh-gossip = { version = "0.32", features = ["net"] }
dialoguer = "0.9"
futures-lite = "1.12"
quic-rpc = "0.1"
async-channel = "2.3.1"